@@ -50,9 +50,96 @@ class QuickpayNotificationTest < Test::Unit::TestCase
 
   private
   def http_raw_data
-    "msgtype=authorize&ordernumber=1353061158&amount=123&currency=DKK&time=2012-11-16T10:19:36%2B00:00&state=1&" +
-    "qpstat=000&qpstatmsg=OK&chstat=000&chstatmsg=OK&merchant=Merchant #1&merchantemail=merchant1@pil.dk&transaction=4262&" +
-    "cardtype=dankort&cardnumber=XXXXXXXXXXXX9999&cardhash=&splitpayment=1&fraudprobability=&fraudremarks=&fraudreport=&" +
-    "fee=0&md5check=7caa0df7d17085206af135ed70d22cc9"
+    <<-END_POST
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="msgtype"
+
+authorize
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="ordernumber"
+
+1353061158
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="amount"
+
+123
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="currency"
+
+DKK
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="time"
+
+2012-11-16T10:19:36+00:00
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="state"
+
+1
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="qpstat"
+
+000
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="qpstatmsg"
+
+OK
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="chstat"
+
+000
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="chstatmsg"
+
+OK
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="merchant"
+
+Merchant #1
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="merchantemail"
+
+merchant1@pil.dk
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="transaction"
+
+4262
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="cardtype"
+
+dankort
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="cardnumber"
+
+XXXXXXXXXXXX9999
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="cardhash"
+
+
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="splitpayment"
+
+1
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="fraudprobability"
+
+
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="fraudremarks"
+
+
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="fraudreport"
+
+
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="fee"
+
+0
+------------------------------8a827a0e6829
+Content-Disposition: form-data; name="md5check"
+
+7caa0df7d17085206af135ed70d22cc9
+------------------------------8a827a0e6829--
+END_POST
   end
 end
