@@ -11,6 +11,7 @@
 * PayPal Express gateway: Remember the billing agreement id as Response#authorization [duff]
 * PayPal Express gateway: Allow an amount of 0 [duff]
 * PayPal Express gateway: Reduce parameter requirements [duff]
+* Quickpay integration: Update notification parser to handle API v6 [larspind]
 
 == Version 1.32.1 (April 4, 2013)
 
